--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,21 +6,11 @@ homepage: https://github.com/MikeMitterer/dart-latlong
 version: 0.6.1
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  logging: '>=0.11.3 <1.0.0'
-  console_log_handler: '>=1.1.0 <2.0.0'
-    # git: git@github.com:MikeMitterer/dart-console_log_handler.git
-    # path: /Volumes/Daten/DevLocal/DevDart/ConsoleLogHandler
-
-  validate: ^1.0.0
-
-  intl: '>=0.15.0 <1.0.0'
+  logging: ^1.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
-  test: any
-
-  build_runner: any
-  build_test: any
-  build_web_compilers: any
+  test: ^1.16.5
